# Malim

./: .gitignore  README.md  package-lock.json  package.json  reader_temp.txt  ru_accent_server.py  silero_server.py  svelte.config.js  tmp.txt
malim_server/: Cargo.toml  sync_server.db
malim_server/src/: main.rs
src/: app.css  app.html
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  test_bundler  test_bundler.rs
src-tauri/.cargo/: config1.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: brain.rs  lib.rs  main.rs  memory.rs  resolver.rs  saves.rs  state.rs
src-tauri/src/chat/: ai.rs  commands.rs  db.rs  mod.rs  token.rs  vector.rs
src-tauri/src/dict/: mod.rs
src-tauri/src/grammar_correction/: commands.rs
src-tauri/src/scrapers/: commands.rs  kbs.rs  kp.rs  mod.rs  registry.rs  ria.rs  tmt.rs  yna.rs
src-tauri/src/translation/: commands.rs  mod.rs
src/components/: ApiConfigModel.svelte  Brain.svelte  Chat.svelte  Dictionary.svelte  Discover.svelte  Editor.svelte  Flag.svelte  Notification.svelte  PromptGenerator.svelte  Reader.svelte  Sidebar.svelte  StatsModal.svelte  TagEditorModal.svelte  TranslatorLab.svelte  WordPopover.svelte
src/lib/: audio.ts  notificationStore.ts  parser.ts  parser.ts.bak  stores.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
