[package]
name = "malim"
version = "0.3.0"
description = "A language learning app"
authors = ["Drantiss"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "malim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "rustls-tls"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
msedge-tts = "0.2"
dashmap = "6"
unicode-normalization = "0.1"
unic-emoji-char = "0.9"
tauri-plugin-media-toolkit = "0.1"
rodio = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
rand = "0.8"
chrono = "0.4.44"
openssl-sys = { version = "0.9", features = ["vendored"] }
async-trait = "0.1.89"
scraper = "0.26.0"
rsmorphy = "0.4.0"
rsmorphy-dict-ru = "0.1"
roxmltree = "0.21"
regex = "1.12.3"
tiktoken-rs = "0.5.8"
ort = { version = "2.0.0-rc.12", features = ["tls-rustls"] }
tokenizers = "0.15.2"
anyhow = "1.0"
